Changelog
=========

1.7.3 (unreleased)
------------------

- Nothing changed yet.


1.7.2 (2018-03-01)
------------------

- Fix `batou.lib.file.Purge` to be able to delete files again.


1.7.1 (2018-01-29)
------------------

- Fix git deployment repository handling.


1.7.0 (2018-01-29)
------------------

- `git.Clone` uses `git reset` instead of merge/checkout to get the defined
   state.

- batou uses `git reset` instead of merge/checkout to update the remote
  deployment repository.

- Improve error message when deploying a wrong branch.

1.6.1 (2017-11-27)
------------------

- Log very large (100k+) templates as dangerous. We've seen Jinja/Python
  segfault when users started using massively large (8MiB+) template files
  and this really isn't a good idea to start with. For example it increases
  computing time even at 100k quite a lot.

  We try to keep going, though. But in the case of segfaults the user sees a
  reasonable error message and knows what to do.

- Improve error reporting for missing our superfluous resources.

- Using File('foo') with implicitly picking up the source `foo` was confusing
  as it also would create (and enforce!) an empty file silently
  if the source did not exist.

  File('foo') now expects that the source `foo` exists and if you really want
  an empty file you have to explicitly say File('foo', content='') or if you
  don't care about the content use Presence('foo').

- Using File('foo') with implicitly picking up the source `foo` was confusing
  as it also would create (and enforce!) an empty file silently
  if the source did not exist.

  File('foo') now expects that the source `foo` exists and if you really want
  an empty file you have to explicitly say File('foo', content='') or if you
  don't care about the content use Presence('foo').

- Do not use '--always-copy' in VirtualEnv's any longer. This caused more pain
  and inconsistencies than it provided value.

1.6.0 (2017-11-07)
------------------
