@@ -4,7 +4,8 @@ Changelog
 1.7.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix git-bundle deploy when there are no changes to the deployment repository
+  (#100645)
 
 
 1.7.2 (2018-03-01)
